--- a/notes/linear-algebra/index.html
+++ b/notes/linear-algebra/index.html
@@ -16,8 +16,8 @@
     content="A minimal, almost class-less CSS library to write modern websites that look like LaTeX documents." />
   <meta property="og:type" content="website" />
 
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="prism/prism.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/prism/prism.css" />
 </head>
 
 <body id="top" class="text-justify">
@@ -697,7 +697,7 @@
     })
   </script>
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-  <script async src="prism/prism.js"></script>
+  <script async src="js/prism.js"></script>
 
 </body>
 
