--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -14,11 +14,12 @@
   <meta property="og:description" content="" />
   <meta property="og:type" content="website" />
 
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="prism/prism.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/prism/prism.css" />
 </head>
 
 <body id="top" class="text-justify">
+
   <header>
     <h1><span class="latex">Affine Transformations</h1>
     <p class="author">
