--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -1023,7 +1023,7 @@ function plotAxesInfo() {
         <br/>
 
         <div>
-          <script data-height="525" data-preview-width="400" type="text/p5">
+          <script data-height="525" data-preview-width="400" type="text/p5" data-p5-version="1.11.8">
 let x = 0, y = 0;
 
 function nextPoint() {
