--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -37,6 +37,7 @@
       <li><a href="#homogeneous-coordinates">Homogeneous coordinates</a></li>
       <li><a href="#fractals">Affine transformations and Fractals</a></li>
       <ol>
+        <li><a href="#iterated-function-systems">Iterated Function Systems</a></li>
         <li><a href="#sierpinski-triangle">Sierpiński Triangle: A Deterministic IFS</a></li>
         <li><a href="#barnsley-fern">Barnsley fern: A Probabilistic IFS</a></li>
       </ol>
@@ -634,7 +635,7 @@
           lies in how complex, intricate patterns can emerge from the iteration of simple rules.
         </p>
 
-        <h3>Iterated Function Systems</h3>
+        <h3 id="iterated-function-systems">Iterated Function Systems</h3>
 
         <p>
           An IFS consists of a finite set of affine transformations \( \{T_1, T_2, \dots, T_n\} \), each of the form:
@@ -1325,9 +1326,9 @@ function drawPoint() {
     });
   </script>
 
-
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <script src="js/mathjax.js"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  
 
   <script async src="prism/prism.js"></script>
 
