--- a/notes/linear-algebra/affine-transformations.html
+++ b/notes/linear-algebra/affine-transformations.html
@@ -1330,7 +1330,7 @@ function drawPoint() {
   <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   
 
-  <script async src="prism/prism.js"></script>
+  <script async src="js/prism.js"></script>
 
   <script src="https://toolness.github.io/p5.js-widget/p5-widget.js"></script>
 
