--- a/notes/2201nsc/week-01.html
+++ b/notes/2201nsc/week-01.html
@@ -68,6 +68,9 @@
     <h1>Week 1</h1>
   </header>
 
+  <br>
+  <hr>
+
   <main>
 
     <article>
@@ -159,7 +162,7 @@
 
   <span id="footer-elements">
     <span style="font-weight: bold;">[</span>
-    <a href="../"><i class="fa-solid fa-house"></i> Home</a>,
+    <a href="/"><i class="fa-solid fa-house"></i> Home</a>,
     <span class="hide-small">
       <a href="#"><i
           class="fa-solid fa-lightbulb"></i> Issues</a>
