--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -2,15 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>  <section data-type="chapter" id="contents-q7a9CX7">Contents</title>
-
-  <!-- Starts main content -->
-
-  <!--<div w3-include-html="small_screen_message.html"></div>-->
-    
-
-  
-
+  <title>  Contents
+</title>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,8 +20,13 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
-<body data-type="book" id="top">
+<link rel="stylesheet" href="css/style.css">
 
+
+</head>
+
+<body data-type="book" id="top">
+<section data-type="chapter" id="contents-q7a9CX7">
   <div class="myLoader" id="loader">
     <div class="dots">
       <div class="dot"></div>
@@ -96,7 +94,7 @@
 
   <span id="footer-elements">
     <span style="font-weight: bold;">[</span>
-    <a href="../"><i class="fa-solid fa-house"></i> Home</a>,
+    <a href="/"><i class="fa-solid fa-house"></i> Home</a>,
     <span class="hide-small">
       <a href="#"><i
           class="fa-solid fa-lightbulb"></i> Issues</a>
