--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body data-type="book" id="top">
+<body data-type="book" id="top" class="text-justify">
 
   <div class="myLoader" id="loader">
     <div class="dots">
@@ -47,12 +47,16 @@
             <span class="content-hover-previous">Week 1</span>
             <span class="content-hover">Contents</span>
             <span class="content-original">Linear Algebra</span>
+            <span class="content-hover-next">LaTeX.css</span>
         </a>
     </div>
+    <a href="template.html" class="link" id="next-link">
+        <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
+    </a>
 </div>
   <!-- Main DIV Starts here -->
   <div class="container">
-    <section data-type="chapter" id="affine-transformations-JWyJtKR">
+    <section data-type="chapter" id="affine-transformations">
 
   <!-- Starts main content -->
 
@@ -1346,8 +1350,8 @@ function drawPoint() {
 
   <script src="https://toolness.github.io/p5.js-widget/p5-widget.js"></script>
 
-  <a href="#" style="text-decoration: none;">
-        <p class="nextPage">To be continue <i class="fa-solid fa-infinity"></i></p>
+  <a href="template.html" style="text-decoration: none;">
+        <p class="nextPage">Next <i class="fa-solid fa-infinity"></i></p>
   </a>
   <!-- Ends main content -->
 
