--- a/notes/2201nsc/week-01.html
+++ b/notes/2201nsc/week-01.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body data-type="book" id="top">
+<body data-type="book" id="top" class="text-justify">
 
   <div class="myLoader" id="loader">
     <div class="dots">
@@ -56,7 +56,7 @@
 </div>
   <!-- Main DIV Starts here -->
   <div class="container">
-    <section data-type="chapter" id="week-1-1L91UWL">
+    <section data-type="chapter" id="week-01">
 
   <!-- Starts main content -->
 
@@ -106,17 +106,10 @@
         non ultricies ex pretium. Proin sed vestibulum arcu.
        </p>
 
-       <p>
-         Curabitur tristique, ante vel pulvinar semper, sapien ex dignissim sapien, vel blandit mi libero in tellus. Nunc
-        in convallis mi. Curabitur turpis arcu, tincidunt id auctor eget, dapibus vitae leo. Curabitur mattis nunc
-        neque, a pulvinar ex ultrices et. Vivamus malesuada arcu ligula, sit amet cursus quam egestas eget. Nulla in
-        magna tincidunt, sagittis mauris vel, blandit risus. Mauris suscipit, dolor in venenatis ultrices, arcu justo
-        faucibus eros, vitae aliquam justo diam sed leo. Integer gravida orci ipsum, a dapibus nulla sagittis in.
-        Curabitur efficitur dui et mauris aliquam, at elementum tortor pharetra.
-
-       </p>
-        <p>
-           Sed eget velit elementum, cursus ante at, mattis dui. Pellentesque habitant morbi tristique senectus et netus et
+       
+        
+         <p>
+            Sed eget velit elementum, cursus ante at, mattis dui. Pellentesque habitant morbi tristique senectus et netus et
         malesuada fames ac turpis egestas. Suspendisse mollis ornare ante, vel imperdiet est cursus nec. Proin nec quam
         ac tortor rhoncus cursus. Nullam venenatis porta nisi at porttitor. Nam lacus tellus, accumsan at velit a,
         cursus aliquet diam. Duis bibendum lacus ut dolor feugiat feugiat. Donec at feugiat magna, in molestie turpis.
@@ -124,7 +117,7 @@
         nibh. Curabitur quis libero auctor, imperdiet sapien quis, sagittis mi. Fusce consectetur eros id ex semper,
         vitae sollicitudin sapien blandit. Praesent posuere metus quam, ut tempus velit aliquet sed. Nulla facilisi.
 
-        </p>
+         </p>
         <p>
           Vestibulum lacinia nibh vel mauris vulputate, ac sagittis lectus accumsan. Ut hendrerit scelerisque orci. Mauris
         euismod tortor sed libero facilisis, vel efficitur magna ultricies. Vivamus sagittis venenatis venenatis. Donec
