--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -25,8 +25,8 @@
 
 </head>
 
-<body data-type="book" id="top">
-<section data-type="chapter" id="contents-q7a9CX7">
+<body data-type="book" id="top" class="text-justify">
+
   <div class="myLoader" id="loader">
     <div class="dots">
       <div class="dot"></div>
@@ -36,10 +36,9 @@
     <div class="loadingMessage">Loading...</div>
   </div>
 
-
   <!-- Main DIV Starts here -->
   <div class="container">
-    <section data-type="chapter" id="contents-q7a9CX7">
+    <section data-type="chapter" id="intro">
 
   <!-- Starts main content -->
 
