--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -2,7 +2,24 @@
 <html lang="en">
 
 <head>
-  <title>  Contents
+  <title>  <section data-type="chapter" id="intro">
+
+  <!-- Starts main content -->
+
+  <!--<div w3-include-html="small_screen_message.html"></div>-->
+
+  
+
+  <header>
+
+  
+
+    <iframe frameborder="0" width="100%" height="350px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/shaders/box-space/" style="border: 1px solid black; overflow: hidden;">
+                </iframe>
+
+    
+
+    <h1 style="text-align: center;">Contents
 </title>
 
   <meta charset="UTF-8">
@@ -36,6 +53,20 @@
     <div class="loadingMessage">Loading...</div>
   </div>
 
+<div class="fixed-bar" id="fixed-bar">
+    <div class="link-container">
+    </div>
+    <div class="link">
+        <a href="index.html" class="link" id="center-link">
+            <span class="content-hover">Contents</span>
+            <span class="content-original">Linear Algebra</span>
+            <span class="content-hover-next">Week 1</span>
+        </a>
+    </div>
+    <a href="week-01.html" class="link" id="next-link">
+        <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
+    </a>
+</div>
   <!-- Main DIV Starts here -->
   <div class="container">
     <section data-type="chapter" id="intro">
