--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -1316,7 +1316,7 @@ function drawPoint() {
 
           <li id="rogers-1976">
             Rogers, D. F. (1976). <em>Mathematical Elements for Computer Graphics</em>. McGraw Hill.
-            <a href="https://archive.org/details/mathematicalelem00roge/" target="_blank">https://archive.org/details/mathematicalelem00roge/</a>
+             &nbsp;<a href="https://archive.org/details/mathematicalelem00roge/" target="_blank"><i class="fas fa-external-link-alt"></i></a>
           </li>
         </ol>
 
@@ -1350,9 +1350,6 @@ function drawPoint() {
 
   <script src="https://toolness.github.io/p5.js-widget/p5-widget.js"></script>
 
-  <a href="template.html" style="text-decoration: none;">
-        <p class="nextPage">Next <i class="fa-solid fa-infinity"></i></p>
-  </a>
   <!-- Ends main content -->
 
 </section>
@@ -1361,6 +1358,10 @@ function drawPoint() {
    <!-- Button to Top -->
   <button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
   
+<a href="template.html" style="text-decoration: none;">
+    <p class="nextPage">Next <i class="fa-solid fa-angles-right"></i></p>
+</a>
+
 <footer>
 
   <span id="footer-elements">
