--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -2,24 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>  <section data-type="chapter" id="intro">
-
-  <!-- Starts main content -->
-
-  <!--<div w3-include-html="small_screen_message.html"></div>-->
-
-  
-
-  <header>
-
-  
-
-    <iframe frameborder="0" width="100%" height="350px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/shaders/box-space/" style="border: 1px solid black; overflow: hidden;">
-                </iframe>
-
-    
-
-    <h1 style="text-align: center;">Contents
+  <title>  Contents
 </title>
 
   <meta charset="UTF-8">
@@ -78,15 +61,12 @@
   <br><br>
 
   <header>
-
-  
-
     <iframe frameborder="0" width="100%" height="350px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/shaders/box-space/" style="border: 1px solid black; overflow: hidden;">
                 </iframe>
 
     <br><br>
 
-    <h1 style="text-align: center;">Contents</h1>
+    <h1>Contents</h1>
   </header>
 
    <nav role="navigation" class="toc">
@@ -109,9 +89,7 @@
 
   </main>
 
-  <a href="week-01.html" style="text-decoration: none;">
-    <p class="nextPage">Week 1  <i class="fa-solid fa-angles-right"></i></p>
-  </a>
+ 
   <!-- Ends main content -->
 
 </section>
@@ -120,6 +98,10 @@
    <!-- Button to Top -->
   <button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
   
+<a href="week-01.html" style="text-decoration: none;">
+    <p class="nextPage">Next <i class="fa-solid fa-angles-right"></i></p>
+</a>
+
 <footer>
 
   <span id="footer-elements">
