--- a/notes/2201nsc/week-01.html
+++ b/notes/2201nsc/week-01.html
@@ -140,9 +140,6 @@
 
   </main>
 
-  <a href="affine-transformations.html" style="text-decoration: none;">
-    <p class="nextPage">Affine transformations  <i class="fa-solid fa-angles-right"></i></p>
-  </a>
   <!-- Ends main content -->
 
 </section>
@@ -151,6 +148,10 @@
    <!-- Button to Top -->
   <button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
   
+<a href="affine-transformations.html" style="text-decoration: none;">
+    <p class="nextPage">Next <i class="fa-solid fa-angles-right"></i></p>
+</a>
+
 <footer>
 
   <span id="footer-elements">
