--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -149,7 +149,7 @@
 
       <div id="section2">
 
-        <h2 id="affine-transformations">Affine transformations</h2>
+        <h2>Affine transformations</h2>
 
         <p>Consider a point $\mathbf x=(x,y).$ A transformation $T: \mathbb R^2 \to \mathbb R^2$ of the form
           \[
