--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
   <!-- keep the line below for OpenProcessing compatibility -->
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
@@ -14,8 +16,6 @@
 </head>
 
 <body>
-
-
 
   <script src="inf-room/mySketch.js"></script>
 
