--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -18,24 +18,22 @@
   <link rel="shortcut icon" type="image/svg+xml" type="image/svg" href="imgs/icon-griffith.svg" sizes="32x32">
 
   <link rel="stylesheet" href="css/style.css" />
-</head>
-
-<link rel="stylesheet" href="css/style.css">
+  
+  <link rel="stylesheet" href="css/style.css">
 
 
 </head>
 
 <body data-type="book" id="top" class="text-justify">
 
-  <div class="myLoader" id="loader">
+<div class="myLoader" id="loader">
     <div class="dots">
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
     <div class="loadingMessage">Loading...</div>
-  </div>
-
+</div>
 <div class="fixed-bar" id="fixed-bar">
     <div class="link-container">
         <a href="week-01.html" class="link" id="prev-link">
@@ -194,7 +192,7 @@
         </figure>
 
         <p>
-          If $a,c = \cos \theta,$ $b = -\sin \theta,$ $d = \sin \theta,$ and $e,f=0,$ then we have a pure rotation about
+          If $a,d = \cos \theta,$ $b = -\sin \theta,$ $c = \sin \theta,$ and $e,f=0,$ then we have a pure rotation about
           the origin
           \[
           \mathbf{T\left( \mathbf x\right)} = \begin{pmatrix}
@@ -1355,9 +1353,10 @@ function drawPoint() {
 </section>
   </div>
 
-   <!-- Button to Top -->
-  <button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-  
+<!-- Button to Top -->
+<button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+
+
 <a href="template.html" style="text-decoration: none;">
     <p class="nextPage">Next <i class="fa-solid fa-angles-right"></i></p>
 </a>
