--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -18,25 +18,36 @@
   <link rel="shortcut icon" type="image/svg+xml" type="image/svg" href="imgs/icon-griffith.svg" sizes="32x32">
 
   <link rel="stylesheet" href="css/style.css" />
-</head>
-
-<link rel="stylesheet" href="css/style.css">
+  
+  <link rel="stylesheet" href="css/style.css">
 
 
 </head>
 
 <body data-type="book" id="top" class="text-justify">
 
-  <div class="myLoader" id="loader">
+<div class="myLoader" id="loader">
     <div class="dots">
-      <div class="dot"></div>
-      <div class="dot"></div>
-      <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
+        <div class="dot"></div>
     </div>
     <div class="loadingMessage">Loading...</div>
-  </div>
-
-
+</div>
+<div class="fixed-bar" id="fixed-bar">
+    <div class="link-container">
+    </div>
+    <div class="link">
+        <a href="index.html" class="link" id="center-link">
+            <span class="content-hover">Contents</span>
+            <span class="content-original">Linear Algebra</span>
+            <span class="content-hover-next">Week 1</span>
+        </a>
+    </div>
+    <a href="week-01.html" class="link" id="next-link">
+        <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
+    </a>
+</div>
   <!-- Main DIV Starts here -->
   <div class="container">
     <section data-type="chapter" id="intro">
@@ -82,9 +93,10 @@
 </section>
   </div>
 
-   <!-- Button to Top -->
-  <button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
-  
+<!-- Button to Top -->
+<button onclick="topFunction()" id="toTop" title="Go to top"><i class="fa-solid fa-arrow-up"></i></button>
+
+
 <a href="week-01.html" style="text-decoration: none;">
     <p class="nextPage">Next <i class="fa-solid fa-angles-right"></i></p>
 </a>
