--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -105,7 +105,7 @@
 
   <span id="footer-elements">
     <span style="font-weight: bold;">[</span>
-    <a href="/"><i class="fa-solid fa-house"></i> Home</a>,
+    <a href="../"><i class="fa-solid fa-house"></i> Home</a>,
     <span class="hide-small">
       <a href="#"><i
           class="fa-solid fa-lightbulb"></i> Issues</a>
