--- a/notes/2201nsc/week-01.html
+++ b/notes/2201nsc/week-01.html
@@ -58,8 +58,6 @@
 
   <!-- Starts main content -->
 
-  <!--<div w3-include-html="small_screen_message.html"></div>-->
-
   <br><br>
 
   <header>
@@ -75,7 +73,7 @@
 
       <div id="section1">
 
-        <h2 id="intro">Introduction</h2>
+        <h2 id="intro">Lorem Ipsum</h2>
 
         <p>
           Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
@@ -90,41 +88,15 @@
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae turpis risus. Praesent sed diam mattis,
         tempor risus vel, tristique metus. Vivamus vitae molestie ante. Aliquam dignissim arcu nec neque mollis mattis.
         Aenean sed est lacus. Quisque ullamcorper id libero sed rutrum. Cras aliquam nibh in eros tincidunt elementum.
-        Integer eget mattis mi, id dapibus dui. Vestibulum iaculis laoreet bibendum. Curabitur ut ante id tellus
-        pellentesque venenatis et vehicula dui. Vestibulum imperdiet elit ac accumsan rhoncus. Sed aliquam aliquet
-        porta. Nulla facilisi. Curabitur faucibus volutpat turpis non blandit.
+        Integer eget mattis mi, id dapibus dui. 
 
        </p>
-       <p>
-         Pellentesque ullamcorper lacus in nibh euismod cursus. Interdum et malesuada fames ac ante ipsum primis in
-        faucibus. Sed et magna sit amet risus pharetra iaculis id at erat. Vestibulum blandit gravida eros, feugiat
-        fringilla erat luctus quis. Nullam at laoreet lacus. Morbi maximus nunc vitae risus pulvinar, at facilisis eros
-        porta. In hac habitasse platea dictumst. Sed ac justo nunc. Nunc laoreet neque arcu, vel auctor turpis viverra
-        in. Aliquam condimentum hendrerit lacinia. Integer in eleifend dolor. Integer venenatis lacus a sapien lobortis,
-        non ultricies ex pretium. Proin sed vestibulum arcu.
-       </p>
 
-       
-        
-         <p>
-            Sed eget velit elementum, cursus ante at, mattis dui. Pellentesque habitant morbi tristique senectus et netus et
-        malesuada fames ac turpis egestas. Suspendisse mollis ornare ante, vel imperdiet est cursus nec. Proin nec quam
-        ac tortor rhoncus cursus. Nullam venenatis porta nisi at porttitor. Nam lacus tellus, accumsan at velit a,
-        cursus aliquet diam. Duis bibendum lacus ut dolor feugiat feugiat. Donec at feugiat magna, in molestie turpis.
-        Aliquam dapibus, purus maximus consectetur pellentesque, diam nisl luctus magna, a rhoncus tortor ipsum quis
-        nibh. Curabitur quis libero auctor, imperdiet sapien quis, sagittis mi. Fusce consectetur eros id ex semper,
-        vitae sollicitudin sapien blandit. Praesent posuere metus quam, ut tempus velit aliquet sed. Nulla facilisi.
 
-         </p>
-        <p>
-          Vestibulum lacinia nibh vel mauris vulputate, ac sagittis lectus accumsan. Ut hendrerit scelerisque orci. Mauris
-        euismod tortor sed libero facilisis, vel efficitur magna ultricies. Vivamus sagittis venenatis venenatis. Donec
-        dapibus libero orci, facilisis fringilla nunc sagittis quis. Fusce lobortis volutpat eros nec maximus. Mauris
-        ultrices et mi id feugiat. Donec ultrices tempor neque, a mattis nisl vehicula sed. Fusce sit amet turpis
-        bibendum, sagittis tortor tincidunt, fermentum dui. Suspendisse et tincidunt nibh. Etiam non dui placerat,
-        vulputate nisl ac, pharetra sapien. Mauris condimentum quam sed massa dignissim consequat. Sed at diam vitae sem
-        pharetra sagittis. Ut sit amet vestibulum nunc.
-        </p>
+       <p style="text-align: center; font-weight: bold;">Coming soon!</p>
+
+       <iframe frameborder="0" width="100%" height="450px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/moebius/" style="border: 1px solid black; overflow: hidden;">
+                </iframe>
 
       </div>
 
