--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -70,7 +70,7 @@
    <nav role="navigation" class="toc">
         
         <ol>
-          <li><a href="index.html">Introduction</a></li>
+          <li><a href="#">Introduction</a></li>
           <li><a href="week-01.html">Week 1</a></li>
           <li><a href="affine-transformations.html">Affine transformations</a></li>
         </ol>
