--- a/notes/2201nsc/index.html
+++ b/notes/2201nsc/index.html
@@ -32,7 +32,20 @@
     </div>
     <div class="loadingMessage">Loading...</div>
 </div>
-
+<div class="fixed-bar" id="fixed-bar">
+    <div class="link-container">
+    </div>
+    <div class="link">
+        <a href="index.html" class="link" id="center-link">
+            <span class="content-hover">Contents</span>
+            <span class="content-original">Linear Algebra</span>
+            <span class="content-hover-next">Week 1</span>
+        </a>
+    </div>
+    <a href="week-01.html" class="link" id="next-link">
+        <span class="arrow"><i class="fa-solid fa-arrow-right"></i></span>
+    </a>
+</div>
   <!-- Main DIV Starts here -->
   <div class="container">
     <section data-type="chapter" id="intro">
@@ -90,7 +103,7 @@
 
   <span id="footer-elements">
     <span style="font-weight: bold;">[</span>
-    <a href="../"><i class="fa-solid fa-house"></i> Home</a>,
+    <a href="./"><i class="fa-solid fa-house"></i> Home</a>,
     <span class="hide-small">
       <a href="#"><i
           class="fa-solid fa-lightbulb"></i> Issues</a>
