--- a/notes/2201nsc/week-01.html
+++ b/notes/2201nsc/week-01.html
@@ -82,19 +82,11 @@
           PageMaker including versions of Lorem Ipsum.
         </p>
 
-       <p>
-         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vitae turpis risus. Praesent sed diam mattis,
-        tempor risus vel, tristique metus. Vivamus vitae molestie ante. Aliquam dignissim arcu nec neque mollis mattis.
-        Aenean sed est lacus. Quisque ullamcorper id libero sed rutrum. Cras aliquam nibh in eros tincidunt elementum.
-        Integer eget mattis mi, id dapibus dui. 
 
-       </p>
+        <p style="text-align: center; font-weight: bold;">Coming soon!</p>
 
-
-       <p style="text-align: center; font-weight: bold;">Coming soon!</p>
-
-       <iframe frameborder="0" width="100%" height="450px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/moebius/" style="border: 1px solid black; overflow: hidden;">
-                </iframe>
+        <iframe frameborder="0" width="100%" height="450px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/moebius/" style="border: 1px solid black; overflow: hidden;">
+        </iframe>
 
       </div>
 
@@ -125,7 +117,7 @@
 
   <span id="footer-elements">
     <span style="font-weight: bold;">[</span>
-    <a href="../"><i class="fa-solid fa-house"></i> Home</a>,
+    <a href="./"><i class="fa-solid fa-house"></i> Home</a>,
     <span class="hide-small">
       <a href="#"><i
           class="fa-solid fa-lightbulb"></i> Issues</a>
