--- a/notes/2201nsc/affine-transformations.html
+++ b/notes/2201nsc/affine-transformations.html
@@ -1356,7 +1356,7 @@ function drawPoint() {
 
   <span id="footer-elements">
     <span style="font-weight: bold;">[</span>
-    <a href="../"><i class="fa-solid fa-house"></i> Home</a>,
+    <a href="./"><i class="fa-solid fa-house"></i> Home</a>,
     <span class="hide-small">
       <a href="#"><i
           class="fa-solid fa-lightbulb"></i> Issues</a>
