--- a/notes/2201nsc/week-01.html
+++ b/notes/2201nsc/week-01.html
@@ -85,7 +85,7 @@
 
         <p style="text-align: center; font-weight: bold;">Coming soon!</p>
 
-        <iframe frameborder="0" width="100%" height="450px" scrolling="no" src="https://www.dynamicmath.xyz/sketches/moebius/" style="border: 1px solid black; overflow: hidden;">
+        <iframe frameborder="0" width="100%" height="400px" scrolling="no" src="https://vector-calculus.github.io/applets/threejs/gravity/" style="border: 1px solid black; overflow: hidden;">
         </iframe>
 
       </div>
