--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -63,10 +63,353 @@
 					</span>
 				</h2>
 
-				<br/>
+				<br />
 				<p style="margin-top: 50px;">Introduction
 				</p>
-				<br /><br/><br/>
+				<br /><br /><br />
+			</section>
+
+			<section>
+				<h3>Lecture (two hours)</h3>
+
+				<div class="size-80  left-txt">
+					<ul>
+						<li>
+							Choice of lecture:
+							<ul>
+								<li>
+									Live lecture on-campus.
+								</li>
+								<li>
+									Pre-recorded lecture (not run live).
+								</li>
+
+							</ul>
+						</li>
+						<li>
+							Format of lecture:
+							<ul>
+								<li>
+									Introduce the content for the week.
+								</li>
+								<li>
+									Worked examples.
+								</li>
+
+							</ul>
+						</li>
+
+					</ul>
+				</div>
+
+				<br /><br />
+			</section>
+
+			<section>
+				<h3>Workshop (two hours)</h3>
+
+				<div class="size-80 left-txt">
+					<ul>
+						<li>
+							Format of workshop:
+							<ul>
+								<li>
+									Collaborate with other students.
+								</li>
+								<li>
+									Work through workshop questions.
+								</li>
+								<li>
+									Opportunity to ask questions.
+								</li>
+								<li>
+									Receive individualised help.
+								</li>
+								<li>
+									Marks for engagement with workshop.
+								</li>
+
+							</ul>
+						</li>
+
+
+					</ul>
+				</div>
+
+				<br /><br />
+			</section>
+
+
+			<section>
+				<h3>Assumed Knowledge</h3>
+
+				<div class="size-80 left-txt">
+					<p>
+						No assumed knowledge from senior high school mathematics.
+					</p>
+					<ul>
+						<li>
+							Orientation Week (0-Week) Revision:
+							<ul>
+								<li>
+									Understanding of the basic operations.
+								</li>
+								<li>
+									Working with negative numbers.
+								</li>
+								<li>
+									Working with fractions.
+								</li>
+								<li>
+									Converting between fractions, decimals and percentages.
+								</li>
+								<li>
+									Rounding decimal.
+								</li>
+
+							</ul>
+						</li>
+
+
+					</ul>
+				</div>
+
+				<br /><br />
+			</section>
+
+			<section>
+				<h3>Resources available on Learning@Griffith</h3>
+
+				<div class="size-80 left-txt">
+
+					<ul>
+						<li>
+							No textbook required and no reading list.
+						</li>
+						<li>
+							Lecture videos (pre-recorded).
+						</li>
+						<li>
+							Weekly summary sheet.
+						</li>
+						<li>
+							Workshops Questions (and solutions).
+						</li>
+						<li>
+							Numbas (online practice environment).
+						</li>
+
+
+					</ul>
+				</div>
+
+				<br /><br />
+			</section>
+
+			<section>
+				<h3>Assessment</h3>
+
+				<div class="size-80 left-txt">
+
+					<ul>
+						<li>
+							Foundation Mathematics is non-graded course.
+						</li>
+						<li>
+							Non-graded pass (NGP) or non-graded fail (NGF).
+						</li>
+
+
+					</ul>
+
+					<br /><br />
+
+					<ul>
+						<li>
+							Workshop Engagement (20%) - Weekly.
+						</li>
+						<li>
+							Progress Test 1 (20%) - Week 4.
+						</li>
+						<li>
+							Progress Test 2 (20%) - Week 8.
+						</li>
+						<li>
+							Progress Test 3 (20%) - Week 12.
+						</li>
+
+
+					</ul>
+
+					<br /><br />
+
+					<ul>
+						<li>Minimum of 65% overall required for a non-graded pass (NSP).</li>
+					</ul>
+
+
+				</div>
+
+				<br /><br />
+			</section>
+
+			<section>
+				<h3>Need help?</h3>
+
+				<div class="size-80 left-txt">
+
+					<ol>
+						<li>
+							Workshop.
+						</li>
+						<li>
+							Revision sessions / Drop-in Session / Study Sessions.
+						</li>
+						<li>
+							Microsoft Teams.
+						</li>
+						<li>
+							Email (for personal and confidential matters).
+						</li>
+
+
+					</ol>
+				</div>
+
+				<br /><br />
+			</section>
+
+			<section>
+				<h3>Required Resources</h3>
+
+				<p>
+					Scientific Calculator (graphics calculators and programmable
+					calculators cannot be used during assessment).
+				</p>
+
+				<div class="size-80 left-txt">
+
+					<ol>
+						<li>
+							Campus Bookshop.
+						</li>
+						<li>
+							Officeworks.
+						</li>
+						<li>
+							Big W.
+						</li>
+						<li>
+							Reliable internet connection (or use Griffith WiFi).
+						</li>
+
+
+					</ol>
+				</div>
+
+				<br /><br />
+			</section>
+
+			<section>
+				<h3>Workload (10-12 hours per week for 10CP course)</h3>
+
+
+
+				<div class="size-80 left-txt">
+
+					<table>
+						<tr>
+							<td style="border: none;">
+								Lecture
+
+							</td>
+							<td style="border: none;">
+								2 hours
+
+							</td>
+						</tr>
+						<tr>
+							<td style="border: none;">
+								Workshop
+
+							</td style="border: none;">
+							<td style="border: none;">
+								2 hours
+
+							</td>
+						</tr>
+						<tr>
+							<td style="border: none;">
+								Complete workshop questions
+
+							</td>
+							<td style="border: none;">
+								2 hours
+
+							</td>
+						</tr>
+						<tr>
+							<td style="border: none;">
+								Re-watch video
+
+							</td>
+							<td style="border: none;">
+								1 hours
+
+							</td>
+						</tr>
+						<tr>
+							<td style="border: none;">
+								Numbas (online environment)
+
+							</td>
+							<td style="border: none;">
+								2 hours
+
+							</td>
+						</tr>
+						<tr>
+							<td style="border: none;">
+								Revision/Study for assessment
+
+							</td>
+							<td style="border: none;">
+								1 hours
+
+							</td>
+						</tr>
+						<tr>
+							<td>
+								<strong>Total</strong>
+							</td>
+							<td>
+								10
+							</td>
+						</tr>
+
+
+					</table>
+
+				</div>
+
+				<br /><br />
+			</section>
+
+			<section data-transition="fade"
+				data-background-iframe="https://www.dynamicmath.xyz/threejs/math-symbols-fall/">
+				
+				<h3 style="color:white; margin-top: -0px;">See you in Week 1! </h3>
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
+
 			</section>
 
 
