--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -60,13 +60,15 @@
 				<h2>
 					<span class="size-70">
 						Foundation Mathematics
+						<br/>
+						1017SCG
 					</span>
 				</h2>
 
 				<br />
 				<p style="margin-top: 50px;">Introduction
 				</p>
-				<br /><br /><br />
+				<br /><br />
 			</section>
 
 			<section>
@@ -102,7 +104,10 @@
 					</ul>
 				</div>
 
-				<br /><br />
+				<br />
+				<br />
+				<br />
+				<br />
 			</section>
 
 			<section>
@@ -136,7 +141,10 @@
 					</ul>
 				</div>
 
-				<br /><br />
+				<br />
+				<br />
+				<br />
+				<br />
 			</section>
 
 
@@ -203,7 +211,11 @@
 					</ul>
 				</div>
 
-				<br /><br />
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
 			</section>
 
 			<section>
@@ -250,11 +262,13 @@
 
 				</div>
 
-				<br /><br />
+				<br />
 			</section>
 
 			<section>
 				<h3>Need help?</h3>
+
+			
 
 				<div class="size-80 left-txt">
 
@@ -276,18 +290,23 @@
 					</ol>
 				</div>
 
-				<br /><br />
+				<br />
+				<br />
+				<br />
+				<br />
 			</section>
 
 			<section>
 				<h3>Required Resources</h3>
 
-				<p>
-					Scientific Calculator (graphics calculators and programmable
-					calculators cannot be used during assessment).
-				</p>
+
 
 				<div class="size-80 left-txt">
+
+					<p>
+						Scientific Calculator (graphics calculators and programmable
+						calculators cannot be used during assessment).
+					</p>
 
 					<ol>
 						<li>
@@ -392,12 +411,12 @@
 
 				</div>
 
-				<br /><br />
+				<br />
 			</section>
 
 			<section data-transition="fade"
 				data-background-iframe="https://www.dynamicmath.xyz/threejs/math-symbols-fall/">
-				
+
 				<h3 style="color:white; margin-top: -0px;">See you in Week 1! </h3>
 				<br />
 				<br />
