--- a/slides/1017scg/index.html
+++ b/slides/1017scg/index.html
@@ -60,7 +60,7 @@
 
 							<td>
 
-								<a href="music.html" target="_blank">Week 0 ❌</a><br />
+								<a href="week-00.html" target="_blank">Week 0</a><br />
 								<a href="pond.html" target="_blank">Week 1 ❌</a><br />
 								<a href="monkey.html" target="_blank">Week 2 ❌</a><br />
 								<a href="music.html" target="_blank">Week 3 ❌</a><br />
