--- a/slides/1017scg/index.html
+++ b/slides/1017scg/index.html
@@ -75,7 +75,7 @@
 							<td>
 								<a href="monkey.html" target="_blank">Week 7 ❌</a><br />
 								<a href="pond.html" target="_blank">Week 8 ❌</a><br />
-								<a href="week-09.html" target="_blank">Week 9 ❌</a><br />
+								<a href="pond.html" target="_blank">Week 9 ❌</a><br />
 								<a href="pond.html" target="_blank">Week 10 ❌</a><br />
 								<a href="music.html" target="_blank">Week 11 ❌</a><br />
 								<a href="monkey.html" target="_blank">Week 12 ❌</a><br />
@@ -95,7 +95,7 @@
 
 							<td>
 
-								&#8226; <a href="#" target="_blank">Coming soon!</a><br />
+								&#8226; <a href="pond.html" target="_blank">Coming soon!</a><br />
 
 
 							</td>
