--- a/slides/1010eng/monkey.html
+++ b/slides/1010eng/monkey.html
@@ -56,7 +56,7 @@
 
 				<p style="font-size:20px">Coming soon! In the mean time, see how this monkey types 1 million digits of \(\pi.\)</p>
 				
-				<iframe style="border: 0px"
+				<iframe data-preload style="border: 0px"
 				scrolling="no"
 				width="100%" 
 				height="560px" 
