--- a/slides/1017scg/pond.html
+++ b/slides/1017scg/pond.html
@@ -52,8 +52,8 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 
 
-			<section  data-background-color="rgb(20,20,20)" data-background-iframe="https://www.dynamicmath.xyz/sketches/my-pond/"
-			data-background-interactive>
+			<section data-preload data-background-color="rgb(20,20,20)" 
+			    data-background-interactive data-background-iframe="https://www.dynamicmath.xyz/sketches/my-pond/" >
 
 				<p style="font-size:16px">Coming soon! In the mean time, look for the fish that follows your mouse 👉🖱️!</p>
 				
