--- a/slides/1010eng/pond.html
+++ b/slides/1010eng/pond.html
@@ -52,7 +52,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 
 
-			<section  data-background-color="rgb(20,20,20)" data-background-iframe="https://www.dynamicmath.xyz/sketches/my-pond/"
+			<section data-preload  data-background-color="rgb(20,20,20)" data-background-iframe="https://www.dynamicmath.xyz/sketches/my-pond/"
 			data-background-interactive>
 
 				<p style="font-size:16px">Coming soon! In the mean time, look for the fish that follows your mouse 👉🖱️!</p>
