--- a/slides/1017scg/monkey.html
+++ b/slides/1017scg/monkey.html
@@ -60,7 +60,7 @@
 				scrolling="no"
 				width="100%" 
 				height="560px" 
-				src="https://www.dynamicmath.xyz/sketches/monkey-pi-digits/"
+				data-src="https://www.dynamicmath.xyz/sketches/monkey-pi-digits/"
 				allowfullscreen=""
 				></iframe>
 	
