--- a/slides/index.html
+++ b/slides/index.html
@@ -97,7 +97,7 @@ https://www.geogebra.org/m/xsy4fy25
             left: 50%;
             transform: translate(-50%, -50%);
 
-            background-color: rgba(0, 0, 0, 0.85);
+            background-color: rgba(0, 0, 0, 0.90);
             color: white;
             padding: 1.5rem;
             border-radius: 1rem;
@@ -129,7 +129,7 @@ https://www.geogebra.org/m/xsy4fy25
     
 
     <div class="card">
-       <h1>Slides</h1>
+       <h1>Courses</h1>
        <ul>
         <li><a href="1017scg/">Foundation Mathematics</a></li>
         <li><a href="1010eng/">Engineering Mathematics 1</a></li>
