--- a/notes/index.html
+++ b/notes/index.html
@@ -92,10 +92,9 @@ https://www.geogebra.org/m/xsy4fy25
     
 
     <div class="card">
-       <h1>Slides</h1>
+       <h1>Notes</h1>
        <ul>
-        <li><a href="1017scg/">Foundation Mathematics</a></li>
-        <li><a href="1010eng/">Engineering Mathematics 1</a></li>
+        <li><a href="2201nsc/">Linear Algebra &amp; Applications</a></li>
        </ul>
     </div>
 
