--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   <script src="https://cdn.jsdelivr.net/npm/p5@1.11.8/lib/p5.min.js"></script>
 
+  <link rel="icon" type="image/png" href="assets/icon/infinity32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="assets/icon/infinity16.png" sizes="16x16">
+
   <link rel="stylesheet" type="text/css" href="inf-room/style.css">
 
   <title>Infinite magic room</title>
