--- a/tools/index.html
+++ b/tools/index.html
@@ -77,8 +77,8 @@
         <p>Sorry, not sure what you are looking for!</p>
         <div style="text-align: center !important;">
             <picture>
-                <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f644/512.webp" type="image/webp">
-                <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f644/512.gif" alt="🙄" width="64" height="64">
+                <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f47b/512.webp" type="image/webp">
+                <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f47b/512.gif" alt="👻" width="64" height="64">
             </picture>
         </div>
     </div>
