--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 
 <body>
 
+  <div class="card">
+    <h1>Contents</h1>
+    <ul>
+      <li><a href="slides/">Slides</a></li>
+      <li><a href="notes/">Notes</a></li>
+    </ul>
+    
+  </div>
+
   <script>
     /*
 
@@ -120,17 +129,17 @@ Date: 15/Jan/2024
      
     */
 
-      if (isMouseOverLink()) {
-        fill(180);
-        cursor('pointer'); // <-- this makes the cursor a hand
-      } else {
-        fill(220);
-        //cursor('default'); // <-- this restores the default cursor
-      }
+      // if (isMouseOverLink()) {
+      //   fill(180);
+      //   cursor('pointer'); // <-- this makes the cursor a hand
+      // } else {
+      //   fill(220);
+      //   //cursor('default'); // <-- this restores the default cursor
+      // }
 
-      rect(0, 0, 110, 30);
-      fill(0);
-      text("dynamicmath.xyz", 7, 19)
+      // rect(0, 0, 110, 30);
+      // fill(0);
+      // text("dynamicmath.xyz", 7, 19)
 
       //console.log(imView);
     }
