--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <ul>
       <li><a href="slides/">Slides</a></li>
       <li><a href="notes/">Notes</a></li>
+      <li><a href="https://www.dynamicmath.xyz/">More cool stuff</a></li>
     </ul>
     
   </div>
