--- a/notes/index.html
+++ b/notes/index.html
@@ -44,6 +44,10 @@ https://www.geogebra.org/m/xsy4fy25
             pointer-events: auto;
         }
 
+        a {
+            text-decoration: none;
+        }
+
 
         #notSupported {
             width: 50%;
