--- a/slides/index.html
+++ b/slides/index.html
@@ -52,6 +52,10 @@ https://www.geogebra.org/m/xsy4fy25
             margin-top: 20px;
             padding: 10px;
         }
+
+        a {
+            text-decoration: none;
+        }
         
         /* Overlay card */
         .card {
