--- a/slides/1017scg/week-00.html
+++ b/slides/1017scg/week-00.html
@@ -60,7 +60,7 @@
 				<h2>
 					<span class="size-70">
 						Foundation Mathematics
-						<br/>
+						<br />
 						1017SCG
 					</span>
 				</h2>
@@ -76,25 +76,26 @@
 
 				<div class="size-80  left-txt">
 					<ul>
-						<li>
+						<li class="fragment" data-fragment-index="0">
 							Choice of lecture:
 							<ul>
-								<li>
-									Live lecture on-campus.
+								<li class="fragment" data-fragment-index="1">
+									[<strong>Recommended</strong>] Live lecture on-campus.
 								</li>
-								<li>
+								<li class="fragment" data-fragment-index="2">
 									Pre-recorded lecture (not run live).
 								</li>
 
 							</ul>
 						</li>
-						<li>
+						<br/>
+						<li class="fragment" data-fragment-index="3">
 							Format of lecture:
 							<ul>
-								<li>
+								<li class="fragment" data-fragment-index="4">
 									Introduce the content for the week.
 								</li>
-								<li>
+								<li class="fragment" data-fragment-index="5">
 									Worked examples.
 								</li>
 
@@ -107,7 +108,6 @@
 				<br />
 				<br />
 				<br />
-				<br />
 			</section>
 
 			<section>
@@ -115,22 +115,22 @@
 
 				<div class="size-80 left-txt">
 					<ul>
-						<li>
+						<li class="fragment" data-fragment-index="0">
 							Format of workshop:
 							<ul>
-								<li>
+								<li class="fragment " data-fragment-index="1">
 									Collaborate with other students.
 								</li>
-								<li>
+								<li class="fragment" data-fragment-index="2">
 									Work through workshop questions.
 								</li>
-								<li>
+								<li class="fragment" data-fragment-index="3">
 									Opportunity to ask questions.
 								</li>
-								<li>
+								<li class="fragment" data-fragment-index="4">
 									Receive individualised help.
 								</li>
-								<li>
+								<li class="fragment" data-fragment-index="5">
 									Marks for engagement with workshop.
 								</li>
 
@@ -152,37 +152,63 @@
 				<h3>Assumed Knowledge</h3>
 
 				<div class="size-80 left-txt">
-					<p>
+					<p class="fragment" data-fragment-index="0">
 						No assumed knowledge from senior high school mathematics.
 					</p>
-					<ul>
-						<li>
-							Orientation Week (0-Week) Revision:
-							<ul>
-								<li>
-									Understanding of the basic operations.
-								</li>
-								<li>
-									Working with negative numbers.
-								</li>
-								<li>
-									Working with fractions.
-								</li>
-								<li>
-									Converting between fractions, decimals and percentages.
-								</li>
-								<li>
-									Rounding decimal.
-								</li>
+					<p class="fragment" data-fragment-index="1">
+						Orientation Week (0-Week) Revision:
+					</p>
 
-							</ul>
+					<ul>
+						<li class="fragment" data-fragment-index="2">
+							Understanding of the basic operations.
+						</li>
+						<li class="fragment" data-fragment-index="3">
+							Working with negative numbers.
+						</li>
+						<li class="fragment" data-fragment-index="4">
+							Working with fractions.
+						</li>
+						<li class="fragment" data-fragment-index="5">
+							Converting between fractions, decimals and percentages.
+						</li>
+						<li class="fragment"  data-fragment-index="6">
+							Rounding decimal.
 						</li>
 
-
 					</ul>
+
 				</div>
 
 				<br /><br />
+			</section>
+
+			<section>
+				<h3>
+					Week 1
+				</h3>
+
+				<br />
+
+				<div class="left-txt size-85">
+					<ul>
+						<li class="fragment"  data-fragment-index="0">
+							Order of operations.
+						</li>
+						<li class="fragment"  data-fragment-index="1">
+							Index Laws.
+						</li>
+						<li class="fragment"  data-fragment-index="2">
+							Scientific notation.
+						</li>
+					</ul>
+
+				</div>
+				<br />
+				<br />
+				<br />
+				<br />
+				<br />
 			</section>
 
 			<section>
@@ -191,19 +217,19 @@
 				<div class="size-80 left-txt">
 
 					<ul>
-						<li>
+						<li class="fragment"  data-fragment-index="0">
 							No textbook required and no reading list.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="1">
 							Lecture videos (pre-recorded).
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="2">
 							Weekly summary sheet.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="3">
 							Workshops Questions (and solutions).
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="4"> 
 							Numbas (online practice environment).
 						</li>
 
@@ -224,10 +250,10 @@
 				<div class="size-80 left-txt">
 
 					<ul>
-						<li>
+						<li class="fragment"  data-fragment-index="0">
 							Foundation Mathematics is non-graded course.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="1">
 							Non-graded pass (NGP) or non-graded fail (NGF).
 						</li>
 
@@ -237,16 +263,16 @@
 					<br /><br />
 
 					<ul>
-						<li>
+						<li class="fragment"  data-fragment-index="2">
 							Workshop Engagement (20%) - Weekly.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="3">
 							Progress Test 1 (20%) - Week 4.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="3">
 							Progress Test 2 (20%) - Week 8.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="3">
 							Progress Test 3 (20%) - Week 12.
 						</li>
 
@@ -256,7 +282,7 @@
 					<br /><br />
 
 					<ul>
-						<li>Minimum of 65% overall required for a non-graded pass (NSP).</li>
+						<li class="fragment"  data-fragment-index="4">Minimum of 65% overall required for a non-graded pass (NSP).</li>
 					</ul>
 
 
@@ -268,21 +294,21 @@
 			<section>
 				<h3>Need help?</h3>
 
-			
+
 
 				<div class="size-80 left-txt">
 
-					<ol>
-						<li>
+					<ol style="line-height: 60px;">
+						<li class="fragment"  data-fragment-index="0">
 							Workshop.
 						</li>
-						<li>
-							Revision sessions / Drop-in Session / Study Sessions.
+						<li class="fragment"  data-fragment-index="1">
+							Revision sessions/Drop-in Session/Study Sessions.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="2">
 							Microsoft Teams.
 						</li>
-						<li>
+						<li class="fragment"  data-fragment-index="3">
 							Email (for personal and confidential matters).
 						</li>
 
@@ -318,13 +344,16 @@
 						<li>
 							Big W.
 						</li>
-						<li>
-							Reliable internet connection (or use Griffith WiFi).
-						</li>
+
 
 
 					</ol>
+					<p  class="fragment"  data-fragment-index="0">
+						Reliable internet connection (or use Griffith WiFi).
+					</p>
 				</div>
+
+
 
 				<br /><br />
 			</section>
